--- a/src/Site/Pages/Shared/_Layout.cshtml
+++ b/src/Site/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Site.styles.css" asp-append-version="true" />
+    <!-- Tailwind CSS from Views RCL -->
+    <link rel="stylesheet" href="~/_content/Views/bundle/index.css" />
 </head>
 <body>
     <header>
