--- a/src/Site/Components/App.razor
+++ b/src/Site/Components/App.razor
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="favicon.png" />
         <HeadOutlet />
     </head>
-    <body>
+    <body class="dark:bg-shadow-1 dark:text-light-3">
         <Routes />
         <script src="_framework/blazor.web.js"></script>
     </body>
