flash: Further refine Flash styles.

--- a/src/Site/Components/Pages/About/Index.razor
+++ b/src/Site/Components/Pages/About/Index.razor
@@ -21,8 +21,12 @@
     </Flash>
 </SectionContent>
 
-<SectionContent SectionName="Header">
+<SectionContent SectionName="Heading">
     <div>This is header slot content.</div>
+</SectionContent>
+
+<SectionContent SectionName="Navigation">
+    <div>Navigation content.</div>
 </SectionContent>
 
 <ContentBlock>
