--- a/src/Views/Server/Features/Flash/Flash.razor
+++ b/src/Views/Server/Features/Flash/Flash.razor
@@ -1,7 +1,19 @@
 @namespace Views.Server.Features
 
-<div class="flash flash--@Model.Modifier flash--open" data-feature="flash">
-    <div class="flex columns-2 w-full max-w-6xl mx-auto px-8 py-4 text-center">
+<div
+    class="
+        flex
+        columns-2
+        w-full
+        max-w-6xl
+        mx-auto
+        flash
+        flash--@Model.Modifier
+        flash--open
+    "
+    data-feature="flash"
+>
+    <div class="flex columns-2 w-full mb-4 px-8 py-4 rounded-md text-center">
         <div class="grow">
             @ChildContent
         </div>
