--- a/src/Views/Server/Features/Flash/Flash.razor.css
+++ b/src/Views/Server/Features/Flash/Flash.razor.css
@@ -3,15 +3,15 @@
   overflow: hidden;
   transition: height 0.2s linear;
 }
-.flash--info {
-  background-color: #000;
+.flash--info > div {
+  background-color: var(--color-shadow-1);
   color: #fff;
 }
-.flash--warning {
+.flash--warning > div {
   background-color: rgb(255, 230, 0);
   color: #000;
 }
-.flash--error {
+.flash--error > div {
   background-color: #f00;
   color: #fff;
 }
