--- a/src/Site/Components/Pages/About/Index.razor
+++ b/src/Site/Components/Pages/About/Index.razor
@@ -29,11 +29,28 @@
     <div>Navigation content.</div>
 </SectionContent>
 
-<ContentBlock>
+<BasicBlock>
+    <h1 class="heading heading-1">
+        This is a heading 1.
+    </h1>
+    <h2 class="heading heading-2">
+        This is a heading 2.
+    </h2>
+    <h3 class="heading heading-3">
+        This is a heading 3.
+    </h3>
+    <h4 class="heading heading-4">
+        This is a heading 4.
+    </h4>
     <p>
         This is body content.
     </p>
-</ContentBlock>
+</BasicBlock>
+<BasicBlock>
+    <p>
+        This is a second content block.
+    </p>
+</BasicBlock>
 
 <SectionContent SectionName="Footer">
     <div>This is footer content.</div>
