--- a/src/Views/Server/Components/PageFooter.razor
+++ b/src/Views/Server/Components/PageFooter.razor
@@ -1,7 +1,7 @@
 @namespace Views.Server.Components
 
-<div class="w-full border">
-    <div class="w-full max-w-6xl mx-auto p-8 text-center border">
+<ContentArea>
+    <div class="py-8 text-center border">
         <div class="mb-2">
             Socials
         </div>
@@ -14,4 +14,4 @@
             </span>
         </div>
     </div>
-</div>
+</ContentArea>
