views: Continue fleshing out theme.

--- a/src/Site/Components/Pages/About/Index.razor
+++ b/src/Site/Components/Pages/About/Index.razor
@@ -9,18 +9,6 @@
     <meta name="description" content="A simple about page." />
 </SectionContent>
 
-<SectionContent SectionName="Flashes">
-    <Flash Level="info">
-        Hello world!
-    </Flash>
-    <Flash Level="warning">
-        Warning!
-    </Flash>
-    <Flash Level="error">
-        Oh no!
-    </Flash>
-</SectionContent>
-
 <SectionContent SectionName="Heading">
     <div>This is header slot content.</div>
 </SectionContent>
@@ -44,6 +32,11 @@
     </h4>
     <p>
         This is body content.
+    </p>
+</BasicBlock>
+<BasicBlock>
+    <p>
+        This is a second content block.
     </p>
 </BasicBlock>
 <BasicBlock>
