--- a/src/Views/Server/Components/BasicBlock.razor
+++ b/src/Views/Server/Components/BasicBlock.razor
@@ -3,7 +3,7 @@
 @namespace Views.Server.Components
 
 <ContentArea>
-    <div class="card mb-4">
+    <div class="object card mb-8">
         @ChildContent
     </div>
 </ContentArea>
