--- a/src/Views/Server/Features/PageHeader/PageHeader.razor
+++ b/src/Views/Server/Features/PageHeader/PageHeader.razor
@@ -4,12 +4,14 @@
 
 <header
     class="
+        object
         flex
         flex-col
         w-full
         mx-auto
-        mb-4
+        mb-8
         p-4
+        bg-light-2
         md:flex-row
         md:columns-2
     "
