--- a/src/Views/Client/styles/components/headings.css
+++ b/src/Views/Client/styles/components/headings.css
@@ -1,6 +1,6 @@
 .heading {
-  font-family: var(--font-sans);
-  font-weight: var(--font-weight-bold);
+  font-family: var(--font-heading);
+  font-weight: var(--font-weight-semibold);
 }
 
 .heading-1 {
@@ -15,10 +15,10 @@
 
 .heading-3 {
   font-size: calc(var(--spacing) * 8);
-  margin-bottom: calc(var(--spacing) * 1);
+  margin-bottom: calc(var(--spacing) * 2);
 }
 
 .heading-4 {
   font-size: calc(var(--spacing) * 6);
-  margin-bottom: calc(var(--spacing) * 1);
+  margin-bottom: calc(var(--spacing) * 2);
 }
