views: Further refine theme.

--- a/src/Site/Components/Pages/About/Index.razor
+++ b/src/Site/Components/Pages/About/Index.razor
@@ -9,6 +9,12 @@
     <meta name="description" content="A simple about page." />
 </SectionContent>
 
+<SectionContent SectionName="Flashes">
+    <Flash Level="error">
+        Test
+    </Flash>
+</SectionContent>
+
 <SectionContent SectionName="Heading">
     <div>This is header slot content.</div>
 </SectionContent>
@@ -30,8 +36,15 @@
     <h4 class="heading heading-4">
         This is a heading 4.
     </h4>
+    <hr class="hr" />
     <p>
         This is body content.
+    </p>
+    <h2 class="heading heading-2">
+        Some project to highlight
+    </h2>
+    <p class="sub-heading">
+        This is a description or brief blurb about whatever is being described.
     </p>
 </BasicBlock>
 <BasicBlock>
