--- a/src/Views/Server/Components/BasicBlock.razor
+++ b/src/Views/Server/Components/BasicBlock.razor
@@ -6,6 +6,9 @@
     <div class="object card mb-8">
         @ChildContent
     </div>
+    <div class="card card--skeletal mb-8">
+        Skeletal card
+    </div>
 </ContentArea>
 
 @code {
