--- a/src/Views/Server/Components/PageFooter.razor
+++ b/src/Views/Server/Components/PageFooter.razor
@@ -1,17 +1,19 @@
 @namespace Views.Server.Components
 
-<ContentArea>
-    <div class="py-8 text-center border">
-        <div class="mb-2">
-            Socials
+<footer class="object bg-light-1 dark:bg-shadow-1">
+    <ContentArea>
+        <div class="py-8 text-center">
+            <div class="mb-2">
+                Socials
+            </div>
+            <div>
+                <span class="block sm:inline-block">
+                    &copy;2026 Jonathan Richards,
+                </span>
+                <span class="block sm:inline-block">
+                    All rights reserved.
+                </span>
+            </div>
         </div>
-        <div>
-            <span class="block sm:inline-block">
-                &copy;2026 Jonathan Richards,
-            </span>
-            <span class="block sm:inline-block">
-                All rights reserved.
-            </span>
-        </div>
-    </div>
-</ContentArea>
+    </ContentArea>
+</footer>
