--- a/src/Views/Client/styles/components/object.css
+++ b/src/Views/Client/styles/components/object.css
@@ -2,14 +2,14 @@
   box-shadow:
     0
     calc(var(--spacing) * 2)
-    calc(var(--spacing) * 8)
+    calc(var(--spacing) * 4)
     var(--color-light-4);
 
     @variant dark {
-
+      box-shadow: none;
     }
 
     @media screen and (prefers-color-scheme: dark) {
-
+      box-shadow: none;
     }
 }
