--- a/src/Site/Components/App.razor
+++ b/src/Site/Components/App.razor
@@ -5,9 +5,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <base href="/" />
         <link rel="stylesheet" href="@Assets["app.css"]" />
         <link rel="stylesheet" href="@Assets["Site.styles.css"]" />
+        <!--
+        <link rel="stylesheet" href="/app.css" />
+        <link rel="stylesheet" href="/Site.styles.css" />
+        -->
         <ImportMap />
         <link rel="icon" type="image/png" href="favicon.png" />
         <HeadOutlet />
