views: Add SectionBlock component.

--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -24,6 +24,45 @@
     <div>Navigation content.</div>
 </SectionContent>
 
+<SectionBlock Id="overview" Heading="Style Guide" HeadingLevel="1">
+    <Overview>
+        <p class="sub-heading">
+            A living specimen page that describes the styles used in this
+            application.  Includes overall rules as well as code snippets and
+            live examples.
+        </p>
+    </Overview>
+    <Content>
+        <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4">
+            <div class="card object">
+                <a href="#approach">Approach</a>
+            </div>
+            <div class="card object">
+                <a href="#conventions">Conventions</a>
+            </div>
+            <div class="card object">
+                <a href="#features">Features</a>
+            </div>
+            <div class="card object">
+                <a href="#components">Components</a>
+            </div>
+            <div class="card object">
+                <a href="#styles">Styles</a>
+            </div>
+        </div>
+    </Content>
+</SectionBlock>
+
+<SectionBlock Id="approach" Heading="Approach" WithOverview="false">
+    <Content>
+        <div class="card object">
+            <p>
+                This is about the general approach.
+            </p>
+        </div>
+    </Content>
+</SectionBlock>
+
 <BasicBlock>
     <h1 class="heading heading-1">
         This is a heading 1.
