--- a/src/Views/Client/styles/components/headings.css
+++ b/src/Views/Client/styles/components/headings.css
@@ -7,18 +7,30 @@
   font-size: calc(var(--spacing) * 10);
   margin-bottom: calc(var(--spacing) * 3);
 }
+.heading-1.heading-top {
+  margin-top: calc(var(--spacing) * -4);
+}
 
 .heading-2 {
   font-size: calc(var(--spacing) * 9);
   margin-bottom: calc(var(--spacing) * 2);
+}
+.heading-2.heading-top {
+  margin-top: calc(var(--spacing) * -4);
 }
 
 .heading-3 {
   font-size: calc(var(--spacing) * 8);
   margin-bottom: calc(var(--spacing) * 2);
 }
+.heading-3.heading-top {
+  margin-top: calc(var(--spacing) * -3);
+}
 
 .heading-4 {
   font-size: calc(var(--spacing) * 6);
   margin-bottom: calc(var(--spacing) * 2);
+}
+.heading-4.heading-top {
+  margin-top: calc(var(--spacing) * -2);
 }
