views: Adjust interplay between block level features.

--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -53,6 +53,10 @@
     </Content>
 </SectionBlock>
 
+<ContentArea>
+    <hr class="hr my-0" />
+</ContentArea>
+
 <SectionBlock Id="approach" Heading="Approach" WithOverview="false">
     <Content>
         <div class="card object">
@@ -62,6 +66,31 @@
         </div>
     </Content>
 </SectionBlock>
+
+<ContentArea>
+    <hr class="hr my-0" />
+</ContentArea>
+
+<SectionBlock Id="headings" Heading="Headings" WithOverview="false">
+    <div class="card object">
+        <h1 class="heading heading-1">
+            This is a heading 1.
+        </h1>
+        <h2 class="heading heading-2">
+            This is a heading 2.
+        </h2>
+        <h3 class="heading heading-3">
+            This is a heading 3.
+        </h3>
+        <h4 class="heading heading-4">
+            This is a heading 4.
+        </h4>
+    </div>
+</SectionBlock>
+
+<ContentArea>
+    <hr class="hr" />
+</ContentArea>
 
 <BasicBlock>
     <h1 class="heading heading-1">
