--- a/src/Views/Server/Components/SectionBlock.razor
+++ b/src/Views/Server/Components/SectionBlock.razor
@@ -2,31 +2,31 @@
 
 @namespace Views.Server.Components
 
-<ContentArea>
-    <section id="@Id">
-        <div class="@(!WithOverview ? "mb-4" : "")">
-            @((MarkupString)BuildHeading(Heading, HeadingLevel))
-        </div>
-        @if (WithOverview) {
-            <div class="flex flex-col columns-2 gap-8 mb-8 lg:flex-row">
-                <div class="basis-[50%]">
-                    @Overview
-                </div>
-                <div class="basis-[50%]">
-                    @Visual
-                </div>
+<div>
+    <ContentArea>
+        <section id="@Id" class="py-16">
+            <div class="@(!WithOverview ? "mb-4" : "")">
+                @((MarkupString)BuildHeading(Heading, HeadingLevel))
             </div>
-        }
-        @if (WithContent) {
-            <div>
-                @Content
-            </div>
-        }
-    </section>
-    @if (WithRule == true) {
-        <hr class="hr my-16">
-    }
-</ContentArea>
+            @if (WithOverview) {
+                <div class="flex flex-col columns-2 gap-8 mb-8 lg:flex-row">
+                    <div class="basis-[50%]">
+                        @Overview
+                    </div>
+                    <div class="basis-[50%]">
+                        @Visual
+                    </div>
+                </div>
+            }
+            @if (WithContent) {
+                <div>
+                    @Content
+                </div>
+            }
+            @ChildContent
+        </section>
+    </ContentArea>
+</div>
 
 @code{
     [Parameter]
@@ -48,13 +48,13 @@
     public RenderFragment Content { get; set; }
 
     [Parameter]
+    public RenderFragment ChildContent { get; set; }
+
+    [Parameter]
     public bool WithOverview { get; set; } = true;
 
     [Parameter]
     public bool WithContent { get; set; } = true;
-
-    [Parameter]
-    public bool WithRule { get; set; } = true;
 
     public string BuildHeading(string heading, int level) {
         return
