flashes: Update Flash close behavior.

--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -11,6 +11,12 @@
 </SectionContent>
 
 <SectionContent SectionName="Flashes">
+    <Flash Level="info">
+        Test
+    </Flash>
+    <Flash Level="warning">
+        Test
+    </Flash>
     <Flash Level="error">
         Test
     </Flash>
