--- a/src/Views/Server/Features/Flash/Flash.razor
+++ b/src/Views/Server/Features/Flash/Flash.razor
@@ -1,7 +1,7 @@
 @using Views.Server.Components
 @namespace Views.Server.Features
 
-<div class="flash flash--@Model.Modifier flash--open" data-feature="flash">
+<div class="flash flash--@Model.Modifier" data-feature="flash">
     <ContentArea>
         <div
             class="
@@ -10,7 +10,6 @@
                 columns-2
                 max-w-6xl
                 mx-auto
-                mb-8
                 px-8
                 py-4
                 rounded-md
