--- a/src/Views/Client/styles/index.css
+++ b/src/Views/Client/styles/index.css
@@ -56,4 +56,5 @@
   @import "./components//headings.css";
   @import "./components/hr.css";
   @import "./components//sub-heading.css";
+  @import "./components/copy.css";
 }
