--- a/src/Views/Server/Components/PageFooter.razor
+++ b/src/Views/Server/Components/PageFooter.razor
@@ -1,6 +1,6 @@
 @namespace Views.Server.Components
 
-<footer class="object bg-light-1 dark:bg-shadow-1">
+<footer class="bg-light-2 dark:bg-shadow-1">
     <ContentArea>
         <div class="py-8 text-center">
             <div class="mb-2">
