--- a/src/Site/Components/Pages/About/Index.razor
+++ b/src/Site/Components/Pages/About/Index.razor
@@ -10,9 +10,6 @@
 </SectionContent>
 
 <SectionContent SectionName="Flashes">
-    <Flash Level="error">
-        Test
-    </Flash>
 </SectionContent>
 
 <SectionContent SectionName="Heading">
@@ -23,40 +20,9 @@
     <div>Navigation content.</div>
 </SectionContent>
 
-<BasicBlock>
-    <h1 class="heading heading-1">
-        This is a heading 1.
-    </h1>
-    <h2 class="heading heading-2">
-        This is a heading 2.
-    </h2>
-    <h3 class="heading heading-3">
-        This is a heading 3.
-    </h3>
-    <h4 class="heading heading-4">
-        This is a heading 4.
-    </h4>
-    <hr class="hr" />
-    <p>
-        This is body content.
-    </p>
-    <h2 class="heading heading-2">
-        Some project to highlight
-    </h2>
-    <p class="sub-heading">
-        This is a description or brief blurb about whatever is being described.
-    </p>
-</BasicBlock>
-<BasicBlock>
-    <p>
-        This is a second content block.
-    </p>
-</BasicBlock>
-<BasicBlock>
-    <p>
-        This is a second content block.
-    </p>
-</BasicBlock>
+<p>
+    This is some test content
+</p>
 
 <SectionContent SectionName="Footer">
     <div>This is footer content.</div>
