views: Remove unused components.

--- a/src/Views/Server/Features/CardLink.razor
+++ b/src/Views/Server/Features/CardLink.razor
@@ -1,4 +1,4 @@
-@namespace Views.Server.Components
+@namespace Views.Server.Featured
 
 <a href="@Href" target="@Target" class="block">
     <div class="card">
