--- a/src/Views/Server/Features/PageFooter.razor
+++ b/src/Views/Server/Features/PageFooter.razor
@@ -1,4 +1,6 @@
-@namespace Views.Server.Components
+@using Views.Server.Components
+
+@namespace Views.Server.Features
 
 <footer class="bg-light-2 dark:bg-shadow-1">
     <ContentArea>
