style-guide: Tweak index page copy.

--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -94,8 +94,7 @@
 <SectionBlock Id="features" Heading="Features">
     <Overview>
         <p class="sub-heading">
-            Non-trivial arrangements of components with additional functionality, ready to be
-            included on any page.
+            Non-trivial arrangements of components with additional functionality.
         </p>
     </Overview>
     <Content>
